# pyHalo

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
example_notebooks/: SIDM_parametric.ipynb  basic_usage.ipynb  cluster_substructure.ipynb  cold_dark_matter.ipynb  correlated_structure.ipynb  custom_mass_concentration_relations.ipynb  example_generating_realizations.ipynb  from_galacticus.ipynb  from_galacticus_debug.ipynb  globular_clusters.ipynb  halo_truncation.ipynb  lensed_images_with_shifted_background_halos.ipynb  manipulating_individual_realizations.ipynb  mixed_DM.ipynb  plotting_methods.ipynb  primordial_black_holes.ipynb  self_interacting_dark_matter.ipynb  single_halo_models.ipynb  tidal_trunction_models.ipynb  ultra_light_dark_matter.ipynb  warm_dark_matter.ipynb
pyHalo/: 2pt_correlation.py  __init__.py  concentration_models.py  defaults.py  mass_function_models.py  massfunc.py  models.py  plotting_routines.py  preset_models.py  pyhalo.py  pyhalo_base.py  pyhalo_dynamic.py  realization_extensions.py  single_realization.py  truncation_models.py  utilities.py
pyhalo/: __init__.py  cli.py
tests/: __init__.py  test_Massfunc.py  test_concentration_models.py  test_mass_function_models.py  test_plotting.py  test_preset_models.py  test_pyhalo.py  test_pyhalo_base.py  test_realization_extensions.py  test_single_realization.py  (+1 more)
(+307 files in other folders)
