[project]
name = "pyhalo"
version = "0.2.6"
authors = [
  { name="Daniel Gilman", email="daniel.gilman@utoronto.ca" },
]
description = "A python package for generating populations of dark matter halos"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dangilman/pyHalo"
"Bug Tracker" = "https://github.com/dangilman/pyHalo/issues"
